[FEAT] Add Electus+ demo project to portfolio

--- a/index.html
+++ b/index.html
@@ -433,6 +433,22 @@
         <div class="grid">
 
           <div class="project-card">
+            <h4>Electus+ — Modern iOS Development Demo 🎨</h4>
+            <div class="project-meta">
+              Swift 6.1, SwiftUI, Clean Architecture, SPM, async/await<br>
+              <a href="https://github.com/vil4max/electus">GitHub</a> · 
+              <a href="https://vil4max.github.io/electus/">Live Demo</a> · 
+              <a href="https://github.com/vil4max/electus/releases/tag/v0.1.0">v0.1.0</a>
+            </div>
+            <ul>
+              <li><strong>Demonstration project:</strong> Showcasing modern Swift 6, strict concurrency, and Clean Architecture patterns in a real-world iOS app</li>
+              <li><strong>Zero comments philosophy:</strong> Self-documenting code demonstrating best practices for maintainability</li>
+              <li><strong>Features:</strong> Animated Welcome Screen, Market List with Binance API, Dark/Light Mode, modular SPM architecture with feature modules</li>
+              <li><strong>Built in public:</strong> Open source project for learning and collaboration, tagged releases for version tracking</li>
+            </ul>
+          </div>
+
+          <div class="project-card">
             <h4>Umico → Birmarket — Super App / Marketplace</h4>
             <div class="project-meta">
               Swift, SwiftUI, UIKit, SPM, Firebase, Clean Architecture<br>
